hphp/hack/test/typecheck/constraint_array_index/after/lambda_string_called_on_vec.php.exp
ERROR: File "lambda_string_called_on_vec.php", line 4, characters 6-11:
Invalid argument (Typing[4110])
  File "lambda_string_called_on_vec.php", line 4, characters 6-11:
  Expected `int` because only `int` can be used to index into a `Vector` or `vec`.
  File "lambda_string_called_on_vec.php", line 3, characters 19-29:
  But got `string`
