hphp/hack/test/typecheck/constraint_array_index/after/lambda_string_called_on_vec.php
<?hh
function f(): void {
  $f = ($v ==> $v["oiia oiia"]);
  $f(vec[0]);
}
